workloads/cwdmdc/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwdmdc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [cwdmdc.patrickdwyer.com]
      secretName: cwdmdc-tls
  rules:
    - host: cwdmdc.patrickdwyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cwdmdc
                port: { number: 80 }
